assets/scss/_features.scss
@use 'shared' as theme;

#Features
{
  position: relative;
  background-color: #fff;
  // margin: 0 10%;
  max-width: 1300px;
  margin: 0 auto;

  padding-top: 3rem;

  h1, h2{
    margin-bottom: 1rem;
  }

  h3{
    font-size: 1.5rem;
  }

  @media (min-width: 768px) {
    aside {
      position: sticky;
      top: 7rem;
    }
  }

  @media (max-width: 769px) {
    aside {
      position: static;
    }
  }

  aside {
    padding: 0;
    height: fit-content;
  }

  main {
    min-width: 0; /* prevents overflow issues */
  }

  
  img{
      max-width: 100%;
      height: auto;
  }

  .featuresMenu
  {
    // border-radius: 5px;
    // box-shadow: 0px 5px 20px 5px rgba(0,0,0,0.50);
    // background-color: #f0f0f0;
    list-style: none;
    // background-color: #eee;

    padding: 0.5rem 0rem;

    li{
      margin: 0;
      // padding: 0.5rem 0rem;
      width: 100%;
      position: relative;
      padding: 0.5rem 0rem;
    }

    li:not(:last-child)::after {
      display: block;
      content: "";
      position: absolute;
      bottom: 0;
      width: 100%;
      height: 1px;
      background-color: #eee;
    }

    .nav-link
    {
      color: #000;
      margin: 0rem;
      padding: 1rem 1rem;
      width: 100%;
      text-align: left;
      border: none;
      background-color: inherit;

      border-radius: 3px;

      // background-color: #eee;

      @media (max-width: 991px) {
        margin: 0.5rem;
        padding: 0.3em 1.5em;
      }
      
      &.active
      {
        background-color: #000; //theme.$orange;
        color: #fff;
        cursor: pointer;
        pointer-events: none;
        

        &:hover
        {
          color: #fff !important;
        }
      }

      &:hover
      {
        background-color: #ddd;
      }
    }
  } 

  h2
  {
    color: #000;
  }

  .mediaShadow
  {
    box-shadow: 0 4px 15px 3px rgba(0,0,0,.3);
  }
  
  .description
  {
    color: #ddd;
    font-size: 1em;
    line-height: 1.6em;

    a
    {
      color: theme.$orange;
    };
    
    ul{
      padding: 0 0 0 1em;
      list-style-type: square;
    }

    li::marker {
      color: theme.$orange;
      // content: '✓';
    }

    li{
      padding-left: 0.5em;
    }
  }

}

